# aws-agentcore-sample

./: README.md
BedrockAgent/: .env.example  README.md
BedrockAgent/agentcore/: agentcore.json  aws-targets.json
BedrockAgent/agentcore/.cli/: deployed-state.json
BedrockAgent/agentcore/cdk/: package-lock.json
BedrockAgent/app/BedrockAgent/: main.py  pyproject.toml
BedrockAgent/app/BedrockAgent/mcp_client/: client.py
BedrockAgent/app/BedrockAgent/model/: load.py
