[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BedrockAgent"
version = "0.1.0"
description = "AgentCore Runtime Application using Strands SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aws-opentelemetry-distro",
    "bedrock-agentcore >= 1.9.1",
    "botocore[crt] >= 1.35.0",
    "mcp >= 1.19.0",
    "strands-agents >= 1.15.0",
    # SigV4-signed MCP transport, used to reach the IAM-authenticated AgentCore Gateway.
    "mcp-proxy-for-aws >= 1.6.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
